Need to fix layout for large articles and overflowing page content. Need to rethink main/nav/wrapper.

--- a/website/assets/layout.css
+++ b/website/assets/layout.css
@@ -372,6 +372,12 @@ main .button:focus
     color: #333;
 }
 
+main img
+{
+    max-width: 60%;
+    max-height: 40%;
+}
+
 
 /*
     Home
