--- a/website/assets/syntax.css
+++ b/website/assets/syntax.css
@@ -2,6 +2,12 @@
     Code highlight style
 */
 
+.highlight
+{
+    max-width: 100%;
+    overflow-x: auto;
+}
+
 .highlight  { background: #ffffff; }
 .highlight .c { color: #999988; font-style: italic } /* Comment */
 .highlight .err { color: #a61717; background-color: #e3d2d2 } /* Error */
